Fix: overflow, inoutfield bugs ***

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body,
 div {
   margin: 0;
   padding: 0;
-  /* overflow: hidden !important; */
+  overflow: hidden !important;
   font-family: 'wavehaus', sans-serif;
 }
 
